--- a/src/main/resources/org/example/tpbiblio/hello-view.fxml
+++ b/src/main/resources/org/example/tpbiblio/hello-view.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.ScrollPane?>
@@ -23,8 +23,8 @@
                <children>
                   <Region prefHeight="100.0" prefWidth="9.0" />
                   <ChoiceBox prefWidth="150.0" />
-                  <Region prefHeight="5.0" prefWidth="400.0" />
-                  <Avatar />
+                  <Region prefHeight="19.0" prefWidth="340.0" />
+                  <Button fx:id="profile_b" mnemonicParsing="false" prefHeight="30.0" prefWidth="88.0" text="Profile" />
                </children>
             </HBox>
          </children>
