--- a/src/main/resources/org/example/tpbiblio/Connection.fxml
+++ b/src/main/resources/org/example/tpbiblio/Connection.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.tpbiblio.ConnexionController">
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
@@ -41,8 +41,13 @@
                </children>
             </GridPane>
             <Label prefHeight="141.0" prefWidth="281.0" text="Page de connexion " textAlignment="CENTER" GridPane.columnIndex="1" />
-            <Button fx:id="valider_login" mnemonicParsing="false" text="Valider" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button fx:id="create_account" mnemonicParsing="false" text="Créer un compte" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="valider_login" mnemonicParsing="false" onAction="#try_login" text="Valider" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <VBox prefHeight="99.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+               <children>
+                  <Label fx:id="error" />
+                  <Button fx:id="create_account" mnemonicParsing="false" onAction="#create_press" text="Créer un compte" />
+               </children>
+            </VBox>
          </children>
       </GridPane>
    </children>
