--- a/src/main/resources/org/example/tpbiblio/hello-view.fxml
+++ b/src/main/resources/org/example/tpbiblio/hello-view.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -35,7 +36,16 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="584.0">
                <children>
-                  <TextArea prefHeight="279.0" prefWidth="584.0" />
+                  <TableView prefHeight="269.0" prefWidth="586.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="Titre" />
+                      <TableColumn prefWidth="75.0" text="Autheur" />
+                        <TableColumn prefWidth="75.0" text="Editeur" />
+                        <TableColumn prefWidth="132.0" text="Année de parution" />
+                        <TableColumn prefWidth="109.0" text="Genres" />
+                        <TableColumn prefWidth="115.0" text="Nombre de copies" />
+                    </columns>
+                  </TableView>
                </children>
             </AnchorPane>
         </content>
